apply from: 'dep.other.gradle'

buildscript {
    ext.springBootVersion = "2.2.1.RELEASE"
    ext.dependencyManagementVersion = "1.0.8.RELEASE"
    ext.modernizerVersion = "1.8.0-1"

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}"
        classpath "gradle.plugin.com.simonharrer:gradle-modernizer-plugin:${modernizerVersion}"
    }

    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
}

configure(allprojects) { project ->
    group = 'com.huijiewei'
    version = '1.0.1'

    repositories {
        mavenCentral()
        jcenter()
    }

    apply plugin: 'idea'

    idea {
        module {
            inheritOutputDirs = false
            outputDir = file("$buildDir/classes/main/")
        }
    }
}

configure(subprojects) { project ->
    apply plugin: 'java'
    apply plugin: "com.simonharrer.modernizer"

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    compileJava {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
        options.encoding = 'UTF-8'
    }

    dependencies {
        compileOnly libs.lombok
        annotationProcessor libs.lombok
    }
}
